--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="home-img">
-        <img src="abraham-lincoln-b6y5dpdf2emb9g0s.jpg" alt="">
+        <img src="image_2025-02-15_212814097.png" alt="">
       </div>
 
     </section>
@@ -56,7 +56,7 @@
     <section class="about" id="about">
 
       <div class="about-img">
-        <img src="abraham-lincoln-b6y5dpdf2emb9g0s.jpg" alt="">
+        <img src="image_2025-02-15_212814097.png" alt="">
       </div> 
 
       <div class="about-content">
@@ -136,10 +136,10 @@
         </div>
 
         <div class="project-card">
-          <img src="image (5).jpg" alt="">
+          <img src="image_2025-02-15_212814097.png" alt="">
 
-          <h3>Real</h3>
-          <p>Real</p>
+          <h3>Sigma Boy</h3>
+          <p>Idk</p>
           <div class="btn">Review Project</div>
         </div>
       </div>
