--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   </head>
   <body>
 
+     <div class="container">
+      <video autoplay loop muted plays-inline class="background-clip">
+        <source src="y2mate.com - Earth from space  Video clip_1080.mp4" type= "video/mp4">
+      </video>
+
     <header class="header">
 
       <a href="#home" class="logo">
