--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     />
   </head>
   <body>
-
      <div class="container">
       <video autoplay loop muted plays-inline class="background-clip">
         <source src="y2mate.com - Earth from space  Video clip_1080.mp4" type= "video/mp4">
       </video>
+
+    </div>
 
     <header class="header">
 
