--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-     <div class="container">
-      <video autoplay loop muted plays-inline class="background-clip">
-        <source src="y2mate.com - Earth from space  Video clip_1080.mp4" type= "video/mp4">
-      </video>
-
-    </div>
-
-    <header class="header">
+  <div class="container">
+    <video autoplay loop muted plays-inline class="background-clip">
+      <source src="BG Web.mp4" type= "video/mp4">
+    </video>
+  </div>
+  
+  <header class="header">
 
       <a href="#home" class="logo">
         Hasan Works <span></span>
