--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       rel="stylesheet"
     />
   </head>
+  <body>
+    <div class="container">
+      <video autoplay loop muted plays-inline class="background-clip">
+        <source src="y2mate.com - 4K SpaceStar scene  Free MG Stock Footage_1080.mp4" type= "video/mp4">
+      </video>
+        
+    </div>
   
   <header class="header">
 
