--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="home-content">
         <h1>Hey, It's <span>Hasan</span></h1>
         <h3>
-          I'm a <span>Graphics Designer</span>
+           a <span>Graphics Designer</span>
         </h3>
         <p>currently living in Karachi, Pakistan and providing services such as designing album covers, thumbnails, logos and video editing long form content such as vlogs and music videos. I can speak English and Urdu fluently, but am learning Spanish and Turkish too.</p>
 
