--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3>
            a <span>Graphics Designer</span>
         </h3>
-        <p>currently living in Karachi, Pakistan and providing services such as designing album covers, thumbnails, logos and video editing long form content such as vlogs and music videos. I can speak English and Urdu fluently, but am learning Spanish and Turkish too.</p>
+        <p>currently living in Karachi, Pakistan and providing services such as designing album covers, thumbnails, logos and video editing long form content such as vlogs and music videos. I can speak English and Urdu fluently, but am learning Spanish too.</p>
 
         <div class="btn-group">
           <a href="#" class="btn">Hire</a>
