--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="home-img">
-        <img src="image_2025-02-15_212814097.png" alt="">
+        <img src="Spidey.webp" alt="">
       </div>
 
     </section>
@@ -63,7 +63,7 @@
     <section class="about" id="about">
 
       <div class="about-img">
-        <img src="image_2025-02-15_212814097.png" alt="">
+        <img src="Spidey.webp" alt="">
       </div> 
 
       <div class="about-content">
