--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="header">
 
       <a href="#home" class="logo">
-        Hasan Works <span></span>
+        Hasan <span>Works</span>
       </a>
 
       <i class="bx bx-menu"id="menu-icon"></i>
