--- a/index.html
+++ b/index.html
@@ -150,10 +150,12 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
       
-      <form action="#">
+      <form action="https://api.web3forms.com/submit " method="POST">
 
         <div class="input-group">
           <div class="input-box">
+
+            <input type="hidden" name="access_key" value="6781f0cb-9727-4775-b132-00577e1eed42">
 
             <input type="text" placeholder="Full Name">
             <input type="email" placeholder="Email">
